--- a/templates/auth-login.html
+++ b/templates/auth-login.html
@@ -1,24 +1,28 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 
     <head>
-        
+         
         <meta charset="utf-8" />
-        <title>Log in | Doot - Responsive Bootstrap 5 Chat App</title>
+        <title>Login | LeggoData</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta content="Doot - Responsive Chat App Template in HTML. A fully featured HTML chat messenger template in Bootstrap 5" name="description" />
-        <meta name="keywords" content="Doot chat template, chat, web chat template, chat status, chat template, communication, discussion, group chat, message, messenger template, status"/>
-        <meta content="Themesbrand" name="author" />
+        <meta
+        content="LeggoData - A chat Platform where you can communicate with any type of datafile using the OpenAi chat functionality. "
+        name="description" />
+    <meta name="keywords"
+        content="LeggoData - A chat Platform where you can communicate with any type of datafile using the OpenAi chat functionality. "/>
+   <meta content="Themesbrand" name="author" />
         <!-- App favicon -->
-        <link rel="shortcut icon" href="../static/assets/images/favicon.ico" id="tabIcon">
+        <link rel="shortcut icon" href="{% static 'assets/images/chat.png'%}" id="tabIcon">
 
         
         <!-- Bootstrap Css -->
-        <link href="../static/assets/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" />
+        <link href="{% static 'assets/css/bootstrap.min.css'%}" id="bootstrap-style" rel="stylesheet" type="text/css" />
         <!-- Icons Css -->
-        <link href="../static/assets/css/icons.min.css" rel="stylesheet" type="text/css" />
+        <link href="{% static 'assets/css/icons.min.css'%}" rel="stylesheet" type="text/css" />
         <!-- App Css-->
-        <link href="../static/assets/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
+        <link href="{% static 'assets/css/app.min.css'%}" id="app-style" rel="stylesheet" type="text/css" />
 
 
     </head>
@@ -30,11 +34,11 @@
                     <div class="col-xl-3 col-lg-4">
                         <div class="p-4 pb-0 p-lg-5 pb-lg-0 auth-logo-section">
                             <div class="text-white-50">
-                                <h3><a href="index.html" class="text-white"><i class="bx bxs-message-alt-detail align-middle text-white h3 mb-1 me-2"></i> Doot</a></h5>
-                                <p class="font-size-16">Responsive Bootstrap 5 Chat App</p>
+                                <h3><a href="/" class="text-white"><img src="{% static 'assets/images/LeggoData.png'%}" width="100%" height="50%"></a></h5>
+                                <p class="font-size-24">Chat with your data using LeggoData</p>
                             </div>
                             <div class="mt-auto">
-                                <img src="../static/assets/images/auth-img.png" alt="" class="auth-img">
+                                <img src="{% static 'assets/images/auth-img.png'%}" alt="" class="auth-img">
                             </div>
                         </div>
                     </div>
@@ -49,12 +53,15 @@
                                             
                                             <div class="text-center mb-5">
                                                 <h3>Welcome Back !</h3>
-                                                <p class="text-muted">Sign in to continue to Doot.</p>
+                                                
+                                           
+                                                <p class="text-muted">Sign in to continue to LeggoData.</p>
                                             </div>
-                                            <form action="index.html">
+                                            <form  action="/user-login" method="POST">
+                                                {% csrf_token%}
                                                 <div class="mb-3">
                                                     <label for="username" class="form-label">Username</label>
-                                                    <input type="text" class="form-control" id="username" placeholder="Enter username">
+                                                    <input type="text" class="form-control" name="loginusername" id="username" placeholder="Enter username">
                                                 </div>
                                                 
                                                 <div class="mb-3">
@@ -63,8 +70,8 @@
                                                     </div>
                                                     <label for="userpassword" class="form-label">Password</label>
                                                     <div class="position-relative auth-pass-inputgroup mb-3">
-                                                        <input type="password" class="form-control pe-5" placeholder="Enter Password" id="password-input">
-                                                        <button class="btn btn-link position-absolute end-0 top-0 text-decoration-none text-muted" type="button" id="password-addon"><i class="ri-eye-fill align-middle"></i></button>
+                                                        <input type="password" name="loginpassword" class="form-control pe-5" placeholder="Enter Password" id="password-input">
+                                                        <button class="btn btn-link position-absolute end-0 top-0 text-decoration-none text-muted" type="submit" id="password-addon"><i class="ri-eye-fill align-middle"></i></button>
                                                     </div>
                                                 </div>
             
@@ -74,7 +81,14 @@
                                                         Remember me
                                                     </label>
                                                 </div>
-            
+                                                <br>
+                                                {% for message in messages  %}   
+                                                <div class="alert alert-{{ message.tags }}" role="alert">
+                                                    <strong>Message : </strong>
+                                                     {{ message|linebreaksbr }}
+                                                  </div>
+                                    
+                                                                                           {% endfor %}  
                                                 <div class="text-center mt-4">
                                                     <button class="btn btn-primary w-100" type="submit">Log In</button>
                                                 </div>
@@ -98,7 +112,7 @@
                                             </form><!-- end form -->
             
                                             <div class="mt-5 text-center text-muted">
-                                                <p>Don't have an account ? <a href="auth-register.html" class="fw-medium text-decoration-underline"> Register</a></p>
+                                                <p>Don't have an account ? <a href="/" class="fw-medium text-decoration-underline"> Register</a></p>
                                             </div>
                                         </div>
                                     </div><!-- end col -->
@@ -124,16 +138,16 @@
         <!-- end auth bg -->
 
         <!-- JAVASCRIPT -->
-        <script src="../static/assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="../static/assets/libs/simplebar/simplebar.min.js"></script>
-        <script src="../static/assets/libs/node-waves/waves.min.js"></script>
+        <script src="{% static 'assets/libs/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+        <script src="{% static 'assets/libs/simplebar/simplebar.min.js' %}"></script>
+        <script src="{% static 'assets/libs/node-waves/waves.min.js' %}"></script>
         <!-- password addon -->
-        <script src="../static/assets/js/pages/password-addon.init.js"></script>
+        <script src="{% static 'assets/js/pages/password-addon.init.js' %}"></script>
 
         <!-- theme-style init -->
-        <script src="../static/assets/js/pages/theme-style.init.js"></script>
+        <script src="{% static 'assets/js/pages/theme-style.init.js' %}"></script>
         
-        <script src="../static/assets/js/app.js"></script>
+        <script src="{% static 'assets/js/app.js' %}"></script>
 
     </body>
 </html>
